--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
               <!-- project 6 -->
               <div class="flex flex-col justify-center gap-2 items-center p-3 border-2 shadow-lg shadow-gray-500  rounded-lg transform transition duration-500 hover:scale-105">
                 <!-- img section -->
-                <div class="w-full ">
-                  <img src="./assests/todo.jpg" alt="todo app" class="rounded-md w-full ">
+                <div class="w-full h-2/3 ">
+                  <img src="./assests/download.jpeg" alt="todo app" class="rounded-md w-full h-full ">
                 </div>
                 <!-- description -->
-                <p class="mt-3 text-xl text-center h-1/3">Todo App using HTML CSS and JavaScript</p>
+                <p class="mt-3 text-xl text-center h-1/3">Dummy App no tech Stack use</p>
                 <!-- buttons -->
                 <div class="flex justify-evenly gap-7 w-full mt-4 1/3">
                   <button class="p-2 w-1/3  md:p-4 bg-blue-500 rounded-lg hover:bg-blue-800 text-white cursor-pointer hover:shadow-md hover:shadow-blue-500">Demo</button>
